# cothesis-curation-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.batch  Dockerfile.benchmark  Dockerfile.prompt-lab  LICENSE  README.md  STATE.md  cloudbuild.batch.yaml  cloudbuild.benchmark.yaml  cloudbuild.prompt-lab.yaml  cothesis_demo_resources_retagged.json  cothesis_tag_vocabulary_spec.md  firestore.indexes.json  firestore.rules  ingestion_agent_prompt.md  pyproject.toml
.claude/: settings.json
agents/: agent.py  requirements.txt  taxonomy.py
console/: Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
data/: README.md
docs/: AGENTS_SPEC.md  AGENT_HANDOVER.md  ARCHITECTURE.md  ARCHITECTURE_BRIEF.md  BUILD_PLAN.md  COMPENDIUM_INTEGRATION.md  COMPENDIUM_RESPONSE.md  DATA_SOURCES.md  DECISIONS.md  DEMO_SCRIPT.md  EVAL.md  INGESTION_AGENT_HANDOVER.md  JUDGE_GUIDE.md  OPERATIONS.md  PIPELINE_ANALYSIS_2026-06-06.md  PROMPT_IMPROVEMENT_BUILD_PLAN.md  PROMPT_IMPROVEMENT_LOOP.md  SCHEMA.md  SUBMISSION.md  TAXONOMY.md
eval/: baseline.json  build_gold_case.py  eval_config.json  gold_set.json  taxonomy_gold.json
scripts/: aggregate_gold_set.py  audit_records.py  backfill_review_queue_appraisal.py  batch.py  deploy_batch_job.sh  deploy_benchmark_job.sh  deploy_console.sh  deploy_prompt_lab_job.sh  e2e_console_smoke.sh  export_gold_from_firestore.py  fetch_live_resources.py  fetch_live_taxonomy.py  import_selection.py  ingest_grounding_data.py  prompt_eval_loop.py  reconcile_pipeline_state.py  refine_classification.py  reprocess_live_resources.py  (+12 more)
(+353 files in other folders)
