[project]
name = "cothesis-curation-agent"
version = "0.1.0"
description = "CoThesis multi-agent curation pipeline — ADK on Vertex AI"
requires-python = ">=3.12"
dependencies = [
    "google-adk>=2.1.0,<2.2.0",
    "google-cloud-firestore>=2.19.0",
    "google-cloud-aiplatform>=1.91.0",
    "google-cloud-secret-manager>=2.22.0",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "gitleaks",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*"]
